--- a/blogweb/app/templates/send_message.html
+++ b/blogweb/app/templates/send_message.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-3">
-    <h1>Send Message to {{recipient}}  </h1>
+<div class="container mt-3" style="
+    padding: 20px;
+		background-color: #f9f9f9; /* Light grey background for the container */
+		border-radius: 8px;
+		box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+    <h1 style="
+		    color: #333;
+    		font-family: 'Arial', sans-serif;
+    		margin-bottom: 20px;">Send Message to {{recipient}}  </h1>
     {% if form %}
-		<form action="" method="POST">
+		<form action="" method="POST" style="
+		    width: 100%; /* Full width */
+    		height: 150px; /* Larger area */
+    		padding: 10px;
+    		border-radius: 8px;
+    		border: 1px solid #ccc;
+    		box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
 			{{ form.hidden_tag() }}			
 			<p><br>
 				{{ form.message(cols=50, rows=4) }}<br>
