--- a/blogweb/app/templates/_post_question.html
+++ b/blogweb/app/templates/_post_question.html
@@ -22,7 +22,7 @@
 
       </div>
       <div class="post-count">
-        200
+        {{post.replies_count()}}
       </div>
       <div class=post-right>
         <div class="post-date">
