--- a/blogweb/app/templates/send_message.html
+++ b/blogweb/app/templates/send_message.html
@@ -11,16 +11,16 @@
     		font-family: 'Arial', sans-serif;
     		margin-bottom: 20px;">Send Message to {{recipient}}  </h1>
     {% if form %}
-		<form action="" method="POST" style="
+		<form action="" method="POST" >
+			{{ form.hidden_tag() }}			
+			<p><br>
+				{{ form.message(cols=50, rows=4,style="
 		    width: 100%; /* Full width */
     		height: 150px; /* Larger area */
     		padding: 10px;
     		border-radius: 8px;
     		border: 1px solid #ccc;
-    		box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
-			{{ form.hidden_tag() }}			
-			<p><br>
-				{{ form.message(cols=50, rows=4) }}<br>
+    		box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);") }}<br>
 				{% for error in form.message.errors %}
 				<span style="color: red;">[{{ error }}]</span>
 				{% endfor %}
