update reply page front end

--- a/blogweb/app/static/reply_list.css
+++ b/blogweb/app/static/reply_list.css
@@ -46,9 +46,9 @@
     
   }
 
-  .post-count {
+  .post-delete {
     height: 100%;
-    width: 100px;
+    width: 120px;
     font-size: 20px;
     margin-top: 10px;
     white-space: nowrap;
