--- a/blogweb/app/templates/_reply_list.html
+++ b/blogweb/app/templates/_reply_list.html
@@ -1,6 +1,6 @@
 {% block styles %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="{{ url_for('static', filename='post_list.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='reply_list.css') }}">
 {% endblock %}
 {% block content %}
 
@@ -15,26 +15,27 @@
         <div class="post-middle-content">
           <div>
             <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
-              post.author.username }}</a>
+              reply.user.username }}</a>
           </div>
 
           <div class="post-title">
-            <a class="post-title-text" href="{{ url_for('post_detail', post_id=post.id) }}">{{
-              post.title }}</a>
+            <a class="post-title-text" href="{{ url_for('post_detail', post_id=post.id) }}">
+              {{ reply.content | safe}}</a>
           </div>
         </div>
 
       </div>
-      <div class="post-count">
-        {{ post.replies_count() }}
-      </div>
+      <div class="post-delete">
+        <form action="{{ url_for('delete_reply', reply_id=reply.id) }}" method="post">
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>      </div>
       <div class=post-right>
         <div class="post-date">
           <div>
             Posted on:
           </div>
           <div>
-            {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
+            {{ reply.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
           </div>
 
         </div>
