restored reply search
restored reply search

--- a/blogweb/app/templates/_message.html
+++ b/blogweb/app/templates/_message.html
@@ -18,9 +18,9 @@
           margin-bottom: 10px;
           border-radius: 15px;
           box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-          max-width: 90%; /* Limit the maximum width */
-          word-wrap: break-word; /* Breaks the words to prevent overflow */
-          overflow-wrap: break-word; /* Ensures long words do not cause overflow */
+          max-width: 90%;
+          word-wrap: break-word;
+          overflow-wrap: break-word;
           box-sizing: border-box; /* Includes padding and border in the element's total width */">{{ post.body }}</p>
 
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
