--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -79,7 +79,7 @@
     <div class="user-bottom">
       <ul class="nav nav-tabs" style="cursor:pointer">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">User Post</a>
+          <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">My Post</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" onclick="showTab(event, 'tab2')">Reply Post</a>
