--- a/blogweb/app/static/user.css
+++ b/blogweb/app/static/user.css
@@ -108,7 +108,7 @@
       padding: 8px;
       height: 40px;
       width: 100%;
-      background-color: #03658c;
+      background-color: #252b2e;
       display: flex;
       align-items: center;
       margin-bottom: 12px;
