--- a/blogweb/app/templates/search_results.html
+++ b/blogweb/app/templates/search_results.html
@@ -1,24 +1,45 @@
 {% extends "base.html" %}
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='search_result.css') }}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+{% endblock %}
 {% block content %}
-<h1>Search Results</h1>
-{% if results %}
-<ul>
-  {% for result in results %}
-  <li>
-    {% if search_type == 'user' %}
-    <!-- link to user profile -->
-    Username: <a href="{{ url_for('user', username=result.username) }}">{{ result.username }}</a>
-    {% elif search_type == 'post' %}
-    <!-- link to post -->
-    Title: <a href="{{ url_for('post_detail', post_id=result.id) }}">{{ result.title }}</a>
-    {% elif search_type == 'reply' %}
-    <!-- link to post -->
-    Reply in Post: <a href="{{ url_for('post_detail', post_id=result[2]) }}">{{ result[1] }}</a> - {{ result[0] }}
+
+<div class="container mt-3 sm-2 md-3 mb-2 search">
+  <div class="search-page">
+    {% if results %}
+    <!-- all user search result -->
+      {% if search_type == 'user' %}
+        <div class=post-table-title>
+          User Name
+        </div>
+        {% for result in results %}
+          {% include '_result_list_user.html' %}
+        {% endfor %}
+      {% endif %}
+    <!-- all post search result -->
+      {% if search_type == 'post' %}
+        <div class=post-table-title>
+          Post Title
+        </div>
+        {% for result in results %}
+          {% include '_result_list_post.html' %}
+        {% endfor %}
+      {% endif %}
+    <!-- all reply search result -->
+      {% if search_type == 'reply' %}
+        <div class=post-table-title>
+          Reply Post Title
+        </div>
+        {% for result in results %}
+          {% include '_result_list_reply.html' %}
+        {% endfor %}
+      {% endif %}
+
+      {% else %}
+        <!-- Empty page content -->
+        {% include 'empty.html' %}
     {% endif %}
-  </li>
-  {% endfor %}
-</ul>
-{% else %}
-<p>No results found.</p>
-{% endif %}
+  </div>
+</div>
 {% endblock %}
