--- a/blogweb/app/templates/search_results.html
+++ b/blogweb/app/templates/search_results.html
@@ -11,7 +11,7 @@
     <!-- all user search result -->
       {% if search_type == 'user' %}
         <div class=post-table-title>
-          User Name
+          User 
         </div>
         {% for result in results %}
           {% include '_result_list_user.html' %}
