--- a/blogweb/app/static/result_list.css
+++ b/blogweb/app/static/result_list.css
@@ -1,7 +1,12 @@
-.post{
- 
-  .post-text{
+.post {
+  display: flex;
+  align-items: center;
+
+  .post-text {
     text-decoration: none;
-    font-size:20px;
+    font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
