--- a/blogweb/app/templates/_reply_list.html
+++ b/blogweb/app/templates/_reply_list.html
@@ -8,7 +8,7 @@
   <tr valign="top">
     <div class="post">
       <div class="post-left">
-        <img src="{{ post.author.avatar(80) }}">
+        <img style="margin-left:10px" src="{{ post.author.avatar(80) }}">
 
       </div>
       <div class="post-middle">
