--- a/blogweb/app/templates/_result_list_user.html
+++ b/blogweb/app/templates/_result_list_user.html
@@ -7,6 +7,7 @@
 <table>
   <tr valign="top">
     <div class="post">
+      <img style="margin-left:10px; margin-right:12px" src="{{ result.avatar(80) }}">
       <a class="user_popup post-text" href="{{ url_for('user', username=result.username ) }}">{{
         result.username }}</a>
     </div>
