--- a/blogweb/app/templates/_message.html
+++ b/blogweb/app/templates/_message.html
@@ -21,7 +21,7 @@
           max-width: 90%;
           word-wrap: break-word;
           overflow-wrap: break-word;
-          box-sizing: border-box; /* Includes padding and border in the element's total width */">{{ post.body }}</p>
+          box-sizing: border-box;">{{ post.body }}</p>
 
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
   </tr>
