--- a/blogweb/app/templates/_message.html
+++ b/blogweb/app/templates/_message.html
@@ -21,6 +21,7 @@
           max-width: 90%;
           word-wrap: break-word;
           overflow-wrap: break-word;
+          word-break: break-all;
           box-sizing: border-box;">{{ post.body }}</p>
 
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
