--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -124,22 +124,25 @@
   margin-left: 10px;
   border-radius: 3px;
 }
-.index-container{
-  display:flex;
+
+.index-container {
+  display: flex;
   justify-content: center;
-  .index-page{
-    width:80%; 
+
+  .index-page {
+    width: 80%;
   }
 }
 
-.tabs-container{
+.tabs-container {
   /* display: flex; */
   /* justify-content: center;
   flex-direction: column;
   align-items: center; */
 }
+
 .tabcontent {
-  margin-top:14px;
+  margin-top: 14px;
   display: none;
 
   .tabcontent-post {
@@ -156,39 +159,45 @@
 
   }
 }
-.tabcontent-post-title{
-  padding:8px;
-  height:40px;
-  width:100%;
-  background-color: #03658c;
+
+.tabcontent-post-title {
+  padding: 8px;
+  height: 40px;
+  width: 100%;
+  background-color: #909090d3;
   display: flex;
   align-items: center;
   margin-bottom: 12px;
-  color:#fff;
-  font-size:16px;
-  .title-left{
+  color: #fff;
+  font-size: 16px;
+  border-radius: 3px;
+
+  .title-left {
     width: 80px !important;
 
   }
-  .title-middle{
-    left:0;
-    width:60%;
+
+  .title-middle {
+    left: 0;
+    width: 60%;
     margin-left: 4px;
   }
-  .title-right{
-    display:flex;
+
+  .title-right {
+    display: flex;
     justify-content: space-between;
     align-items: center;
 
-    .title-count{
-      display:flex;
+    .title-count {
+      display: flex;
       align-items: center;
-      width:100px;
+      width: 100px;
       justify-content: center;
 
     }
-    .title-date{
-      width:200px;
+
+    .title-date {
+      width: 200px;
     }
   }
 
