add reference page

--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -29,6 +29,9 @@
 		<!-- Sidebar -->
 		<nav>
 			<div class="sidebar">
+				<div class="dark-toggle">
+					<div class="toggle-circle" id="toggle-circle"></div>
+				</div>
 				<input type="checkbox" id="checkbox" checked>
 				<label for="checkbox">
 					<i class="fa fa-outdent"></i>
