--- a/blogweb/app/templates/welcome.html
+++ b/blogweb/app/templates/welcome.html
@@ -58,18 +58,15 @@
     <div class="blank-2">
       <div class="footer">
         <div class="column">
-          <h3>About</h3>
+          <h3>Source Code</h3>
           <ul>
-            <li><a href="#">A</a></li>
-            <li><a href="#">B</a></li>
-            <li><a href="#">C</a></li>
-            <li><a href="#">d</a></li>
+            <li><a href="https://github.com/qingdaoalex/CITS5505-Project2">Github Project</a></li>
           </ul>
         </div>
         <div class="column">
           <h3>Other</h3>
           <ul>
-            <li><a href="#">References</a></li>
+            <li><a href="{{ url_for('references')}}">References</a></li>
           </ul>
         </div>
       </div>
