--- a/blogweb/app/templates/404.html
+++ b/blogweb/app/templates/404.html
@@ -20,7 +20,7 @@
       <img src="{{ url_for('static', filename='background.jpg') }}" alt="background image">
       <div class="container">
         <div id="heading-container">
-          <h1 class="center-text" id="heading">404 NOT FOUND</h1>
+          <h1 class="center-text" id="heading">404</h1>
         </div>
         <div class="eye-container">
           <div class="eyes" id="left-eye">
