--- a/blogweb/app/static/base.css
+++ b/blogweb/app/static/base.css
@@ -7,7 +7,11 @@
 body {
 	min-height: 100vh;
 	background-color: #f2f2f2;
+	background: no-repeat center center transparent;
+	background-size: cover;
+	background-attachment: fixed;
 }
+
 
 .sidebar {
 	position: relative;
@@ -150,14 +154,13 @@ body {
 
 
 /* -- Hero image -- */
-.hero-image {
+/* .hero-image {
 	position: relative;
 	margin-bottom: 2%;
 }
 
 .hero-image img {
 	width: 100%;
-	height: 25vh;
 	object-fit: cover;
 	object-position: center;
 	overflow: hidden;
@@ -166,7 +169,7 @@ body {
 
 .hero-image {
 	background-color: #000;
-}
+} */
 
 /* Text Effect */
 .heading {
@@ -192,7 +195,11 @@ body {
 }
 
 @keyframes light {
-	0% {background-position: -300%;}
+	0% {
+		background-position: -300%;
+	}
 
-	100% {background-position: 300%;}
+	100% {
+		background-position: 300%;
+	}
 }
