--- a/blogweb/app/static/post_list.css
+++ b/blogweb/app/static/post_list.css
@@ -1,4 +1,3 @@
-
 .post {
   display: flex;
   align-items: center;
@@ -32,18 +31,19 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-   
-      .post-title-text{
+
+      .post-title-text {
         color: #808080;
         text-decoration: none;
-        &:hover{
-          color:#0d6efd;
+
+        &:hover {
+          color: #0d6efd;
         }
       }
-   
+
 
     }
-    
+
   }
 
   .post-count {
@@ -54,7 +54,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #808080;
+    color: #6C757D;
     display: flex;
     justify-content: center;
   }
@@ -64,8 +64,9 @@
     .post-date {
       display: flex;
       flex-direction: column;
-      width: 200px;      
+      width: 200px;
       top: 10px;
+      color: #6C757D;
 
     }
   }
