--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -12,11 +12,9 @@
 	<div class="index-page">
 		<h1>Hi, {{ current_user.username }}!</h1>
 		<button id="displayPostBtn" style="margin-top:20px; margin-bottom:20px" type="button" onclick="displayPostForm()"
-			class="btn btn-primary">Show
-			Question
-			form</button>
+			class="btn btn-secondary" >Show Question form</button>
 
-		<form id="postForm" action="" method="POST" style="margin:20px; display: none">
+		<form id="postForm" action="" method="POST" style="margin:20px 0px; display: none">
 			{{ form.hidden_tag() }}
 			<p>
 				{{ form.title.label }}<br>
@@ -32,14 +30,14 @@
 				<span style="color: red;">[{{ error }}]</span>
 				{% endfor %}
 			</p>
-			<p>{{ form.submit(class="btn btn-primary") }}</p>
+			<p>{{ form.submit(class="btn btn-secondary") }}</p>
 		</form>
 		<ul class="nav nav-tabs" style="cursor:pointer">
-			<li class="nav-item">
-				<a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
+			<li class="nav-item" style="color:#2e59a7">
+				<a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')" >All Post</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" onclick="showTab(event, 'tab2')">Follwer Post</a>
+			<li class="nav-item" style="color:#2e59a7">
+				<a class="nav-link" onclick="showTab(event, 'tab2')" >Follwer Post</a>
 			</li>
 		</ul>
 		<div class="tabs-container">
