adjust dark mode but failed

--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -5,7 +5,9 @@
   height: 500px;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
+}
+.darkmode-layer, .darkmode-toggle {
+  z-index: 2;
 }
 /* -- Interaction -- */
 /* -- Dialog -- */
