--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -143,6 +143,7 @@
   </script>
   <script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
   <script>CKEDITOR.replace('content');</script>
+  <script src="https://l2dwidget.js.org/lib/L2Dwidget.min.js"></script>
   <script src="{{ url_for('static', filename='live2D.js') }}"></script>
   <script src="{{ url_for('static', filename='dialog.js') }}"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
