--- a/blogweb/app/static/user.css
+++ b/blogweb/app/static/user.css
@@ -108,7 +108,7 @@
       padding: 8px;
       height: 40px;
       width: 100%;
-      background-color: #252b2e;
+      background-color: #6C757D;
       display: flex;
       align-items: center;
       margin-bottom: 12px;
@@ -148,4 +148,13 @@
 
     }
   }
+}
+
+#editprofiel {
+  text-decoration: none;
+  border: #6C757D 1px solid;
+  border-radius: 10px;
+  padding: 8px;
+  text-align: center;
+
 }
