--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-3" style="
-      background-color: #f8f9fa;
+<div class="container mt-5" style="
+      background-color: #e8e8e8;
       padding: 20px;
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);">
     <h1 style="
       color: #333;
       font-family: 'Arial', sans-serif;
-      margin-bottom: 20px;">
+      margin: 20px 0;">
       {{ 'Messages' }}
     </h1><br>
     {% for post in messages %}
