--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -45,7 +45,7 @@
               <p class="about-me-text"> {{ user.about_me }}</p>{% endif %}
               </p>
               {% if user == current_user %}
-              <span><a href="{{ url_for('edit_profile') }}">Edit your profile</a></span>
+              <span><a href="{{ url_for('edit_profile') }}" id="editprofiel">Edit your profile</a></span>
               {% elif not current_user.is_following(user) %}
               <p>
               <form action="{{ url_for('follow', username=user.username) }}" method="post">
@@ -88,8 +88,8 @@
       <div class="user-bottom-middle">
 
         <div class="tabs-container">
-          <div id="tab1" class="tabcontent" style="display: block;">
-            <div class="tabcontent-post">
+          <div id="tab1" class="tabcontent" style="display: block; ">
+            <div class="tabcontent-post" >
               <div class=post-table-title>
                 <div class=title-left>
                   Forums
