--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -229,6 +229,10 @@
 			</div>
 		</div>
 	</div>
+<!-- Map display -->
+  <div id="map-container">
+    <div id="map"></div>
+  </div>
  <!-- Interaction-->
   <div class="interaction-container">
     <div id="dialog">
