--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+<link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -349,6 +345,8 @@
 		}
 	</script>
   <script src="{{ url_for('static', filename='dialog.js') }}"></script>
+<script src="https://l2dwidget.js.org/lib/L2Dwidget.min.js"></script>
+									<script src="{{ url_for('static', filename='live2D.js') }}"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
   <script src="{{ url_for('static', filename='map.js') }}"></script>
 	{% endblock %}
