--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -127,9 +127,9 @@
 .index-container{
   display:flex;
   justify-content: center;
-  .index-page{
-    width:80%; 
-  }
+}
+.index-page{
+  width:80%; 
 }
 
 .tabs-container{
@@ -160,14 +160,14 @@
   padding:8px;
   height:40px;
   width:100%;
-  background-color: #03658c;
+  background-color: #252b2e;
   display: flex;
   align-items: center;
   margin-bottom: 12px;
   color:#fff;
   font-size:16px;
   .title-left{
-    width: 80px !important;
+    min-width: 80px !important;
 
   }
   .title-middle{
