--- a/blogweb/app/static/post_detail.css
+++ b/blogweb/app/static/post_detail.css
@@ -1,8 +1,8 @@
 .post-detail {
   .post-detail-top {
     display: flex;
-    margin-bottom: 20px;
-
+    padding-bottom: 30px;
+    margin-bottom: 28px;
     .post-detail-top-left {
       width: 20%;
     }
@@ -17,8 +17,24 @@
         display: flex;
         flex-direction: column;
 
-        .post-top-content {
+        .post-detail-title {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        .post-detail-author {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color: #757575;
           font-size: 16px;
+
+        }
+
+        .post-top-content {
+          font-size: 22px;
+          overflow-wrap: break-word;
+          word-break: break-all;
         }
       }
 
@@ -50,15 +66,13 @@
 
   }
 
-  .separator {
-    height: 20px;
-    border-top: 1px solid ;
-    background-color: #fff;
-  }
-
   .post-detail-bottom {
+    border-top: 1px solid;
+    padding-top:20px;
+
     display: flex;
-    justify-content: space-between;
+    min-width: 1200px;
+    overflow-x: scroll;
 
     .post-detail-bottom-left {
       width: 20%;
@@ -66,7 +80,7 @@
     }
 
     .post-detail-bottom-middle {
-      width: 60%;
+      width:100%;
 
       .table-content {
         min-height: 800px !important;
@@ -77,7 +91,7 @@
         padding: 8px;
         height: 40px;
         width: 100%;
-        background-color: #03658c;
+        background-color: #252b2e;
         display: flex;
         align-items: center;
         margin-bottom: 12px;
@@ -85,25 +99,44 @@
         font-size: 16px;
 
         .title-left {
-          width: 80px !important;
+          min-width: 80px !important;
 
         }
 
         .title-middle {
           left: 0;
-          width: 60%;
+          min-width: 60%;
+          display: flex;
+          flex-direction: row;
           margin-left: 4px;
+
+          .reply-title {
+            width: 90%;
+            display: flex;
+            align-items: center;
+
+          }
+
+          .reply-id {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 10%;
+
+          }
+
         }
 
         .title-right {
           display: flex;
           justify-content: space-between;
           align-items: center;
+          min-width: 40%;
 
-          .title-count {
+          .title-action {
             display: flex;
             align-items: center;
-            width: 100px;
+            min-width: 120px;
             justify-content: center;
 
           }
