--- a/blogweb/app/templates/_reply_list.html
+++ b/blogweb/app/templates/_reply_list.html
@@ -6,39 +6,48 @@
 
 <table>
   <tr valign="top">
-    <div class="post">
-      <div class="post-left">
-        <img style="margin-left:10px" src="{{ post.author.avatar(80) }}">
+    <div class="reply">
+      <div class="reply-left">
+        <img src="{{ post.author.avatar(80) }}">
 
       </div>
-      <div class="post-middle">
-        <div class="post-middle-content">
+      <div class="reply-middle">
+        <div class="reply-middle-content">
           <div>
             <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
               reply.user.username }}</a>
           </div>
 
-          <div class="post-title">
-            <a class="post-title-text" href="{{ url_for('post_detail', post_id=post.id) }}">
-              {{ reply.content | safe}}</a>
+          <div class="reply-title">
+              <span class="reply-title-text">
+                {{ reply.content | safe}}
+              </span>
           </div>
+        </div>
+        <div class = "reply-middle-id">
+          {{reply.id}}
+
         </div>
 
       </div>
-      <div class="post-delete">
-        <form action="{{ url_for('delete_reply', reply_id=reply.id) }}" method="post">
-          <button type="submit" class="btn btn-danger">Delete</button>
-        </form>      </div>
-      <div class=post-right>
-        <div class="post-date">
-          <div>
-            Posted on:
-          </div>
-          <div>
-            {{ reply.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
-          </div>
+      <div class="reply-delete">
 
+        <form action="{{ url_for('delete_reply', reply_id=reply.id) }}" method="post">
+          {% if reply.user_id == current_user.id %}
+
+          <button type="submit" class="btn btn-danger">Delete</button>
+          {% else %}
+
+          <button type="button" class="btn btn-secondary" disabled>Delete</button>
+          {% endif %}
+        </form>      
+      
+      </div>
+      <div class=reply-right>
+        <div class="reply-date">
+            {{ reply.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
         </div>
+
 
       </div>
 
