--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -6,6 +6,12 @@
       padding: 20px;
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+      <nav aria-label="breadcrumb" >
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{{url_for('index', page=1)}}">Home Page</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Messages</li>
+        </ol>
+      </nav>
     <h1 style="
       color: #333;
       font-family: 'Arial', sans-serif;
