--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -6,9 +6,12 @@
   justify-content: center;
   align-items: center;
 }
-.darkmode-layer, .darkmode-toggle {
+
+.darkmode-layer,
+.darkmode-toggle {
   z-index: 2;
 }
+
 /* -- Interaction -- */
 /* -- Dialog -- */
 #dialog {
@@ -17,6 +20,7 @@
   justify-content: center;
   align-items: center;
 }
+
 #dialog p {
   position: fixed;
   left: 15px;
@@ -44,11 +48,15 @@
 }
 
 @keyframes animate1 {
-  50% {transform: translateY(-10px);}
+  50% {
+    transform: translateY(-10px);
+  }
 }
 
 @keyframes animate2 {
-  50% {transform: translateY(-5px);}
+  50% {
+    transform: translateY(-5px);
+  }
 }
 
 /* -- Comments -- */
@@ -181,9 +189,10 @@
 .index-container {
   display: flex;
   justify-content: center;
-  backdrop-filter: blur(8px);
   padding-top: 2%;
   top: 10%;
+  background-color: rgba(255, 255, 255, 0.557);
+  border-radius: 10px;
 }
 
 .index-container .index-page {
