--- a/blogweb/app/static/base.css
+++ b/blogweb/app/static/base.css
@@ -2,6 +2,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 	width: 100%;
 	height: 50px;
 	line-height: 50px;
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 0.871);
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 	margin-bottom: 2px;
 }
