--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -81,7 +81,7 @@
   position: relative;
   float: left;
   border: 3px solid #FFF;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   margin-right: 20px;
@@ -183,7 +183,7 @@
   padding: 3px 5px;
   font-weight: 700;
   margin-left: 10px;
-  border-radius: 3px;
+  border-radius: 10px;
 }
 
 .index-container {
@@ -192,21 +192,22 @@
 
   padding-top: 2%;
   top: 10%;
-  background-color: rgba(255, 255, 255, 0.557);
+  background-color: rgba(255, 255, 255, 0.871);
   border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .index-container .index-page {
   width: 85%;
-
-
-
-.tabs-container {
-  /* display: flex; */
-  /* justify-content: center;
-  flex-direction: column;
-  align-items: center; */
 }
+
+
+/* .tabs-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+} */
 
 .tabcontent {
   margin-top: 14px;
@@ -238,7 +239,7 @@
   margin-bottom: 12px;
   color: #fff;
   font-size: 16px;
-  border-radius: 3px;
+  border-radius: 10px;
 
   .title-left {
     width: 80px !important;
