--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="container mt-5" style="
-      background-color: #e8e8e8;
+      background-color: rgba(255, 255, 255, 0.871);
       padding: 20px;
-      border-radius: 5px;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);">
       <nav aria-label="breadcrumb" >
         <ol class="breadcrumb">
