--- a/blogweb/app/templates/post_detail.html
+++ b/blogweb/app/templates/post_detail.html
@@ -164,7 +164,7 @@
 
 <!-- <a class="btn btn-primary" style="margin-top: 20px;" href="{{url_for('index', page=1)}}"> Back to index page</a> -->
 {% block script %}
-<script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
+<script src="https://cdn.ckeditor.com/4.16.2/full/ckeditor.js"></script>
 <script>
 	CKEDITOR.replace('content');
 </script>
