uniform the most page style but left the reply page

--- a/blogweb/app/static/search_result.css
+++ b/blogweb/app/static/search_result.css
@@ -1,19 +1,25 @@
-.search{
-  display:flex;
-  justify-content:center;
+.search {
+  display: flex;
+  justify-content: center;
   align-items: center;
-  .search-page{
-    width:80%;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.871);
+  padding-top: 20px;
+
+  .search-page {
+    width: 80%;
   }
+
   .post-table-title {
     padding: 8px;
     height: 40px;
     width: 100%;
-    background-color: #252b2e;
+    background-color: #6C757D;
     display: flex;
     align-items: center;
     margin-bottom: 12px;
-    color: #fff;
+    color: white;
     font-size: 16px;
+    border-radius: 10px;
   }
 }
