--- a/blogweb/app/templates/edit_profile.html
+++ b/blogweb/app/templates/edit_profile.html
@@ -7,7 +7,7 @@
   {% endblock %}
 
 {% block content %}
-  <div class="edit-container">
+  <div class=" mt-5 edit-container">
     <h1>Personal Information</h1>
     <div class="profile-container">
       <div class="info-view">
