--- a/blogweb/app/static/post_detail.css
+++ b/blogweb/app/static/post_detail.css
@@ -1,10 +1,19 @@
+.maincontainer {
+  padding-top: 2%;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.871);
+}
+
 .post-detail {
   .post-detail-top {
     display: flex;
     padding-bottom: 30px;
     margin-bottom: 28px;
+    border: #6C757D 1px solid;
+    border-radius: 10px;
+
     .post-detail-top-left {
-      width: 20%;
+      width: 14.5%;
     }
 
     .post-detail-top-middle {
@@ -22,6 +31,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
         }
+
         .post-detail-author {
           white-space: nowrap;
           overflow: hidden;
@@ -67,8 +77,7 @@
   }
 
   .post-detail-bottom {
-    border-top: 1px solid;
-    padding-top:20px;
+    padding-top: 20px;
 
     display: flex;
     min-width: 1200px;
@@ -76,11 +85,10 @@
 
     .post-detail-bottom-left {
       width: 20%;
-      background-color: #fff;
     }
 
     .post-detail-bottom-middle {
-      width:100%;
+      width: 100%;
 
       .table-content {
         min-height: 800px !important;
@@ -91,12 +99,13 @@
         padding: 8px;
         height: 40px;
         width: 100%;
-        background-color: #252b2e;
+        background-color: #6C757D;
         display: flex;
         align-items: center;
         margin-bottom: 12px;
         color: #fff;
         font-size: 16px;
+        border-radius: 10px;
 
         .title-left {
           min-width: 80px !important;
