fix the console all different errors

--- a/blogweb/app/templates/_message.html
+++ b/blogweb/app/templates/_message.html
@@ -5,7 +5,7 @@
         height: 40px;
         border-radius: 50%;
         border: 2px solid #ddd;
-        overflow: hidden;" src="{{ post.author.avatar(80) }}"></td>
+        overflow: hidden;" crossorigin="anonymous" src="{{ post.author.avatar(80) }}"></td>
       <td>
         <strong>
           <p><a style="    
