--- a/blogweb/app/templates/_post_question.html
+++ b/blogweb/app/templates/_post_question.html
@@ -4,7 +4,7 @@
   <tr valign="top">
     <div class="post">
       <div class="post-left">
-        <img src="{{ post.author.avatar(80) }}">
+        <img src="{{ post.author.avatar(80) }}" crossorigin="anonymous">
 
       </div>
       <div class="post-middle">
