--- a/blogweb/app/templates/_reply_list.html
+++ b/blogweb/app/templates/_reply_list.html
@@ -8,7 +8,7 @@
   <tr valign="top">
     <div class="reply">
       <div class="reply-left">
-        <img src="{{ post.author.avatar(80) }}">
+        <img src="{{ post.author.avatar(80) }}" crossorigin="anonymous">
 
       </div>
       <div class="reply-middle">
