--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -19,7 +19,7 @@
         <div class="row g-0">
           <div class="col-md-4">
             <div class=user-card-left>
-              <img src="{{ user.avatar(200) }}" class="img-fluid rounded-start avatar" alt="Profile Pic">
+              <img src="{{ user.avatar(200) }}" class="img-fluid rounded-start avatar" crossorigin="anonymous" alt="Profile Pic">
               <h3 class="user-name">
                 <!-- User: {{ user.username }} -->
                 <span>Name:</span>
