--- a/blogweb/app/templates/_post_list.html
+++ b/blogweb/app/templates/_post_list.html
@@ -8,7 +8,7 @@
   <tr valign="top">
     <div class="post">
       <div class="post-left">
-        <img style="margin-left:10px" src="{{ post.author.avatar(80) }}">
+        <img style="margin-left:10px" crossorigin="anonymous" src="{{ post.author.avatar(80) }}">
       </div>
       <div class="post-middle">
         <div class="post-middle-content">
