fix the most pages html validation problems through html validator

--- a/blogweb/app/templates/_message.html
+++ b/blogweb/app/templates/_message.html
@@ -1,14 +1,14 @@
 <table>
-  <tr valign="top">
+  <tr style="vertical-align: top;">
       <td ><img style="
         width: 40px;
         height: 40px;
         border-radius: 50%;
         border: 2px solid #ddd;
-        overflow: hidden;" crossorigin="anonymous" src="{{ post.author.avatar(80) }}"></td>
+        overflow: hidden;" crossorigin="anonymous" src="{{ post.author.avatar(80) }}" alt="useravatar" ></td>
       <td>
-        <strong>
-          <p><a style="    
+        <p><strong>
+          <a style="    
             font-weight: bold; /* Make the username bold */
             color: #007bff; /* Bootstrap's default primary color */
             text-decoration: none; /* No underline */
