--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -13,7 +13,7 @@
 			class="btn btn-secondary" >Show Question form</button>
 
 
-		<form id="postForm" action="" method="POST" style="margin:20px 0px; display: none">
+		<form id="postForm" action="/index" method="POST" style="margin:20px 0px; display: none">
 
 			{{ form.hidden_tag() }}
 			<p>
