--- a/blogweb/app/static/questionForm.css
+++ b/blogweb/app/static/questionForm.css
@@ -1,14 +1,18 @@
 .post-area {
-  margin-left: 10px;
-  .post-date {
-    color: red;
-    position: absolute;
-    top: 10;
-    right: 0;
-  }
-  .post-title {
-    margin-top:8px;
-    font-size: 20px;
-    color: black;
-  }
+  position: relative;
+  /* Ensure parent container is positioned relative */
+}
+
+.post-date {
+  color: red;
+  position: absolute;
+  top: 10px;
+  /* Specify units for 'top' value */
+  right: 0;
+}
+
+.post-title {
+  margin-top: 8px;
+  font-size: 20px;
+  color: black;
 }
