--- a/blogweb/app/templates/_post_question.html
+++ b/blogweb/app/templates/_post_question.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='question_post.css') }}">
 
 <table>
-  <tr valign="top">
+  <tr style="vertical-align: top;">
     <div class="post">
       <div class="post-left">
-        <img src="{{ post.author.avatar(80) }}" crossorigin="anonymous">
+        <img src="{{ post.author.avatar(80) }}" crossorigin="anonymous" alt="useravatar">
 
       </div>
       <div class="post-middle">
