--- a/blogweb/app/templates/_result_list_reply.html
+++ b/blogweb/app/templates/_result_list_reply.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <table>
-  <tr valign="top">
+  <tr style="vertical-align: top;">
     <div class="post">
       <a class = "post-text" href="{{ url_for('post_detail', post_id=result[2]) }}">{{ result[1] }}</a> - {{ result[0] }}
     </div>
