--- a/blogweb/app/templates/welcome.html
+++ b/blogweb/app/templates/welcome.html
@@ -34,21 +34,21 @@
       <div class="card-container">
         <div class="card">
           <div class="info">
-            <img src="{{ url_for('static', filename='travel.jpg') }}">
+            <img src="{{ url_for('static', filename='travel.jpg') }}" alt="background">
             <h3>Question</h3>
             <p>You can post your travel experiences.</p>
           </div>
         </div>
         <div class="card">
           <div class="info">
-            <img src="{{ url_for('static', filename='travel.jpg') }}">
+            <img src="{{ url_for('static', filename='travel.jpg') }}" alt="background">
             <h3>Comment</h3>
             <p>You can reply others' posts.</p>
           </div>
         </div>
         <div class="card">
           <div class="info">
-            <img src="{{ url_for('static', filename='travel.jpg') }}">
+            <img src="{{ url_for('static', filename='travel.jpg') }}" alt="background">
             <h3>Message</h3>
             <p>You can send a private message.</p>
           </div>
