Change reply page style

--- a/blogweb/app/static/reply_list.css
+++ b/blogweb/app/static/reply_list.css
@@ -38,7 +38,7 @@
       text-overflow: ellipsis;
    
       .reply-title-text{
-        color: #808080;
+        color: black;
         text-decoration: none;
       }
    
