--- a/blogweb/app/templates/_post_list.html
+++ b/blogweb/app/templates/_post_list.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 
-<table>
+<div>
   <tr style="vertical-align: top;">
     <div class="post">
       <div class="post-left">
@@ -39,7 +39,7 @@
 
     </div>
   </tr>
-</table>
+</div>
 <hr>
 {% endblock %}
 {% block script %}
