--- a/blogweb/app/static/404.css
+++ b/blogweb/app/static/404.css
@@ -1,47 +1,52 @@
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   color: white;
 }
 
 /* -- Background image -- */
 .hero-image img {
-	width: 100%;
+  width: 100%;
   height: 100vh;
-	object-fit: cover;
-	object-position: center;
-	overflow: hidden;
-	opacity: 0.3;
-	filter: alpha(opacity=30);
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
+  opacity: 0.3;
 }
+
 .hero-image {
-	background-color:  #000;
+  background-color: #000;
 }
+
 /* -- 500 Status container -- */
 .container {
   width: 50%;
   display: block;
   position: absolute;
   left: 50%;
-  top:50%;
-  transform: translate(-50%,-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
+
 /* -- 404 Status -- */
-.center-text{
-  text-align: center;   
+.center-text {
+  text-align: center;
 }
-#heading{
+
+#heading {
   font-family: 'Creepster', cursive;
   font-size: 5em
 }
+
 /* -- Eyes animation -- */
-.eye-container{  
+.eye-container {
   display: flex;
   justify-content: center;
   margin-bottom: 5%;
 }
-.eyes{
+
+.eyes {
   width: 5em;
   height: 5em;
   border-radius: 50%;
@@ -53,27 +58,54 @@
   position: relative;
   animation: blinking 3s ease-out 2 5s;
 }
-.pupils{
+
+.pupils {
   width: 1em;
   height: 1em;
   border-radius: 50%;
   position: absolute;
   background-color: black;
-  animation: moving-pups 2.5s cubic-bezier(.43,-0.45,.45,1.42) infinite;
-}
-@keyframes moving-pups{
-  0% {left: 14%;}
-  50%{left: 70%; }
-  100% {left: 14%;}  
+  animation: moving-pups 2.5s cubic-bezier(.43, -0.45, .45, 1.42) infinite;
 }
 
-@keyframes blinking{
-  0%{transform: rotateX(0deg);}
-  20%{transform: rotateX(90deg);}
-  60%{transform: rotateX(45deg);}
-  70%{transform: rotateX(30deg);}
-  80%{transform: rotateX(0deg);}
-  100%{transform: rotateX(0deg);}
+@keyframes moving-pups {
+  0% {
+    left: 14%;
+  }
+
+  50% {
+    left: 70%;
+  }
+
+  100% {
+    left: 14%;
+  }
+}
+
+@keyframes blinking {
+  0% {
+    transform: rotateX(0deg);
+  }
+
+  20% {
+    transform: rotateX(90deg);
+  }
+
+  60% {
+    transform: rotateX(45deg);
+  }
+
+  70% {
+    transform: rotateX(30deg);
+  }
+
+  80% {
+    transform: rotateX(0deg);
+  }
+
+  100% {
+    transform: rotateX(0deg);
+  }
 }
 
 a {
@@ -81,6 +113,7 @@ a {
   text-decoration: none;
   text-transform: uppercase;
 }
+
 a:hover {
   color: gray;
 }
